--- a/index.html
+++ b/index.html
@@ -20,3 +20,11 @@
       <div id="movieYear"></div>
       <div id="movieInfo"></div>
       <div id="movies"></div>
+      
+      
+    </div>
+  </div>
+
+  <script src="app.js"></script>
+</body>
+</html>
